src/scss/journal.scss
/* ... */
blockquote {
  padding: 10px 20px;
  border-left: 3px solid $color-quote-border;
  color: $color-code;
  background: $color-quote-bg;
  p:last-child {
    margin-bottom: 0;
  }
  *:not(pre) {
    color: $color-code;
  }
  pre {
    padding: 0;
  }
  *:last-child > pre {
    margin-bottom: 0;
  }
}

a {
  color: $color-a;
  text-decoration-color: transparent;

  &:not(.no-transition) {
    transition: text-decoration-color 0.1s ease-in-out;
  }
  &:hover {
    color: $color-a-hover;
    text-underline-position: under;
    text-decoration-color: initial;
  }
  @media screen and (max-width: $single-column-max-width) {
    &:hover {
      text-decoration: none !important;
    }
  }
}

.a-block {
  display: block;
  text-decoration: none !important;
  color: inherit;
  &:hover {
    text-decoration: none !important;
  }
}

.no-margin {
  margin: 0;
}

.no-padding {
  padding: 0;
}

.no-overflow {
  overflow: hidden !important;
}

.animated-visibility {
  transition: visibility 0s, opacity 0.5s linear;
  visibility: visible;
  opacity: 1;
}

.invisible {
  visibility: hidden;
  opacity: 0;
}

.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.3s;
}

.fade-enter,
.fade-leave-to {
  opacity: 0;
}

.images {
  $paragraph-spacing: 20px;
  $text-paragraph-spacing-compensate: 2.5px;

  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-wrap: wrap;
  margin-top: -($paragraph-spacing / 2 - $text-paragraph-spacing-compensate);
  margin-bottom: $paragraph-spacing / 2 + $text-paragraph-spacing-compensate;

  .image {
    display: flex;
    flex-direction: column;
    margin: #{$paragraph-spacing / 2} 20px;

    a {
      text-align: center;

      img {
        max-height: 400px;
        border-radius: 0 !important;
      }
    }

    .image-caption {
      margin-bottom: 0;
      margin-top: 11px;
      text-align: center;
      font-size: 14px;
      color: #999;
      clear: both;
    }
  }
}

// dirty hack for livere
#lv-container {
  padding: 0 30px;

  @media screen and (max-width: $single-column-max-width) {
    padding: 0 15px;
  }
}

.single-column-nav-container {
  display: none !important;
  @media screen and (max-width: $single-column-max-width) {
    display: block !important;
    padding: 0;
    * {
      font-family: $sans-preferred-font-list;
    }
    button {
      padding: 0;
    }
    .nav-content {
      padding: 12px 20px;
      justify-content: flex-start;
      max-width: unset !important;
    }
    .navbar-brand {
      opacity: 0;
      text-align: left;
      padding-left: 24px !important;
    }
    .nav-dropdown-toggle {
      display: flex;
      align-content: center;
      align-items: center;
      justify-items: center;
      justify-content: center;
      background: none !important;
      border: none;
      padding-top: 1px;
      color: initial;
      &:hover {
        color: $color-nav-active !important;
      }
    }
    .nav-icon-group {
      z-index: 5;
      padding-right: 5px;
      ul {
        list-style: none;
        margin: 0;
        padding: 0;
      }
      li {
        display: inline;
        margin: 0;
        padding: 0;
      }
    }
    .nav-icon {
      padding: 8px;
    }
    .nav-background {
      opacity: 0;
      z-index: -1;
      left: 0;
      position: absolute;
      width: 100%;
      height: 100%;
      background: white;
      -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
      -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    }
  }
}

.single-column-header-container {
  display: none !important;
  @media screen and (max-width: $single-column-max-width) {
    display: block !important;
    padding: 40px 20px 70px 20px;
    transition: padding 0.5s ease-in-out, margin 0.5s ease-in-out;
    text-align: center;
    font-family: $sans-preferred-font-list;
    * {
      font-family: $sans-preferred-font-list;
      color: $color-main;
    }
    .single-column-header-title {
      font-size: $single-column-nav-title-size;
    }
    .single-column-header-subtitle {
      margin-top: 14px;
      font-size: $single-column-nav-subtitle-size;
      font-weight: 300;
    }
  }
}

.single-column-drawer-container {
  display: none !important;
  @media screen and (max-width: $single-column-max-width) {
    display: block !important;
    position: fixed;
    top: 0;
    left: -$single-column-drawer-width;
    width: $single-column-drawer-width;
    height: 100vh;
    z-index: 1800;
    transition: all 0.3s ease-in-out;
    .drawer-content {
      background: white;
      height: 100%;
      width: 100%;
      padding: 50px 0 80px 0;
      display: flex;
      .drawer-menu {
        flex-grow: 1;
        display: flex;
        justify-items: center;
        // justify-content: center;
        flex-direction: column;
        $drawer-menu-item-active-background-alpha: 0.1;
        $drawer-menu-item-active-color-darken: 30%;
        .drawer-menu-item {
          font-size: $single-column-nav-link-size;
          margin-bottom: 10px;
          border-right: 2px solid transparent;
          padding: 8px 30px 8px 30px;
          cursor: hand;
          cursor: pointer;
          transition: all 0.2s linear;
          color: $color-main;
          &.active {
            border-right: 2px solid $color-a;
            background: $color-drawer-bg;
            color: $color-nav;
          }
        }
      }
    }
  }
}

.single-column-drawer-mask {
  display: none !important;
  @media screen and (max-width: $single-column-max-width) {
    display: block !important;
    position: fixed;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.8);
    z-index: 1600;
    transition: all 0.3s ease-in-out;
  }
}

.single-column-drawer-container-active {
  left: 0;
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
}
/* ... */

